--- a/scraping_service/templates/base.html
+++ b/scraping_service/templates/base.html
@@ -1,31 +1,29 @@
-
+{% load static %}
+{% url 'accounts:update' as update_url %}
+{% url 'accounts:login' as login_url %}
+{% url 'accounts:register' as register_url %}
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="{% static 'favicon.ico' %}">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <title>{% block title %}Home page{% endblock %}</title>
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #bbbbbb;>
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">JF</a>
+        <a class="navbar-brand px-4" href="{% url 'home' %}" id="brand" >Job Finder</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Главная</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Ссылка</a>
-            </li>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 ml-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Выпадающий список
@@ -37,17 +35,53 @@
                 <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Отключенная</a>
-            </li>
+            {% if user.is_authenticated %}
+              <li class="nav-item ">
+                <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+              </li>
+              <li class="nav-item {% if request.path == update_url %} active {% endif %}">
+                <a class="nav-link" href="{% url 'accounts:update' %}">Настройки</a>
+              </li>
+            {% else %}
+              <li class="nav-item {% if request.path == login_url %} active {% endif %}">
+                <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+              </li>
+              <li class="nav-item {% if request.path == register_url %} active {% endif %}">
+                  <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
+              </li>
+            {% endif %}
           </ul>
-          <form class="d-flex">
+          <form class="d-flex px-2">
             <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
             <button class="btn btn-outline-success" type="submit">Поиск</button>
           </form>
         </div>
       </div>
     </nav>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-8 mx-auto my-3">
+          {% if messages %}
+                  {% for message in messages %}
+                  {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                      </div>
+                  {% else %}
+                      <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                      </div>
+                  {% endif %}
+                  {% endfor %}
+
+          {% endif %}
+        </div>
+      </div>
+
+    </div>
     <div class="container">
       {% block content %}{% endblock %}
     </div>
